issue_896: first cut at changing the logic on the validator